// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichLayout should render RichLayout with header, content and footer 1`] = `
<div
  className="theme-rich-layout"
  id="richlayout"
  tabIndex="-1"
>
  <Header
    id="richlayout-header"
  >
    <div>
      Header
    </div>
  </Header>
  <Body
    id="richlayout-body"
  >
    <div>
      Content
    </div>
  </Body>
  <Footer
    id="richlayout-footer"
  >
    <div>
      Footer
    </div>
  </Footer>
</div>
`;

exports[`RichLayout should render with a text in the body 1`] = `
<div
  className="theme-rich-layout"
  id="richlayout"
  tabIndex="-1"
>
  <Header
    id="richlayout-header"
  />
  <Body
    id="richlayout-body"
  >
    <p>
      loreum
    </p>
  </Body>
  <Footer
    id="richlayout-footer"
  />
</div>
`;
